# PRISMA888FORBES

./: .gitignore  AGENTES.md  MISSAO_31_VALVULA_EXECUCAO.md  PRISMA_HANDOFF_TCE_SP.md  PROJECT_AUDIT_REPORT.md  README.md  ROADMAP.md  WORKFLOWS.md  add_llm_model_to_personas.sql  add_strategic_plan_column.sql  audit_votorantim.py  check_db_schema.py  check_ecofestival_payments_final.py  check_promises.py  complete_audit_log.txt  complete_solutions_qi220.py  create_analysis_runs_table.sql  debug_json.py  debug_p3.py  debug_strategies_rls.sql  debug_tasks.py  deep_search_payments.py  final_audit_check.py  final_metrics.py  final_mission_completion.py  fix_infinite_recursion.sql  fix_p1_p2.py  fix_p3_territorialization.py  fix_p3_territorialization_v2.py  full_repair_qi220.py  generate_pdf.py  inspect_match.py  mass_fix_payments.py  repair_all_qi220.py  repair_all_qi220_v2.py  run_migration_social.py  seed_social_mentions.py  valid_flow_structure.json  vercel.json
backend/: Dockerfile  Dockerfile.dev  README.md  analyze_revenues.py  apply_migration.py  apply_migration_support.py  check_and_fix_persona.py  check_documents_table.py  check_rls.py  check_totals.py  check_totals_paginated.py  cleanup_locations.py  create_legislative_support.py  create_logs_table.sql  create_support_table.py  debug_campaigns_schema.py  debug_check_mandates.py  debug_columns.py  debug_deepseek.py  debug_despesas_csv.py  debug_docs_weber.py  debug_documents_schema.py  debug_headers.py  debug_inspect_campaigns.py  debug_inspect_chunks.py  debug_inspect_politicians.py  debug_inspect_tables.py  debug_inspect_users.py  debug_list_radar_personas.py  debug_schema_check.py  debug_tasks.py  detect_encoding.py  fix_mayor_votorantim.py  fix_sync_radar_agents.py  fix_weber_role.py  fix_weber_supabase.py  import_municipal_revenues.py  inspection_result.txt  list_campaigns.py  list_campaigns_v2.py  (+13 more)
backend/archive/: audit_2025_data.py  audit_db_total_2025.py  check_2025_availability.py  check_2025_progress.py  compare_sample.py  debug_audit_votorantim.py  debug_radar_2025.py  ingest_2025_data.py  ingest_full_2025.py  ingest_single_month.py  test_votorantim.py
backend/data/: municipios_ba.json
backend/migrations/: 20241209_match_documents_rpc.sql  20241209_mega_pack_intelligence.sql  2026-02-08_knowledge_infra.sql  2026-03-14_implementacao_emendas.sql  add_mandate_id_to_promises.sql  create_promise_budget_summaries.sql
backend/scripts/: apply_competitors.py  apply_fix_rls.py  apply_migration.py  apply_postgis.py  apply_rls_fix.py  apply_social_monitors.py  audit_persona_model.py  check_cities.py  check_locations_schema.py  check_rls.py  check_rls_locations.py  (+66 more)
(+524 files in other folders)
